mision final terminada

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,36 @@
 {
     "cSpell.words": [
         "bandera",
+        "cambiar",
         "cantidad",
         "codigo",
         "columnas",
+        "contador",
         "Debe",
         "desea",
         "digitar",
+        "escribir",
         "estudiante",
         "estudiantes",
+        "hacerlo",
+        "informacion",
         "Ingresar",
         "Ingrese",
         "Notas",
+        "nuevamente",
+        "numero",
         "opcion",
         "Pedraza",
         "promedio",
+        "puede",
+        "reescribir",
+        "registro",
+        "registró",
         "sumatoria",
         "Talentos",
         "Tarazona",
         "valida",
-        "valido"
+        "valido",
+        "volver"
     ]
 }
