Mision final terminada

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Debe",
         "desea",
         "digitar",
+        "digito",
         "escribir",
         "estudiante",
         "estudiantes",
@@ -16,6 +17,7 @@
         "informacion",
         "Ingresar",
         "Ingrese",
+        "llenar",
         "Notas",
         "nuevamente",
         "numero",
